# dpeek

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  pyproject.toml  repr_highlighter.regex
.github/workflows/: ci.yml  publish-pypi.yml  release.yml
examples/: sample_pipe.csv  titanic.parquet
src/: highlight.rs  main.rs
