[package]
name = "dpeek"
version = "0.2.2"
edition = "2021"
description = "Extremely fast CLI tool for previewing CSV and Parquet files — like head/tail but data-aware"
keywords = ["parquet", "csv", "cli", "data", "preview"]
categories = ["command-line-utilities", "development-tools"]
license = "MIT"
repository = "https://github.com/Xyc2016/dpeek"
readme = "README.md"

[profile.release]
strip = true       # remove debug symbols (~30-50% size reduction)
lto = true         # link-time optimization (smaller + faster)
codegen-units = 1  # required for full LTO

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }{ binary-ext }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "bin"

[dependencies]
polars = { version = "0.53", features = ["parquet", "csv", "lazy", "timezones"] }
clap = { version = "4.6", features = ["derive", "color"] }
regex = "1.12"
owo-colors = { version = "4.3", features = ["supports-colors"] }
anstyle = "1.0"
terminal_size = "0.3"
